# IC

./: .gitignore  lang.cpp
p1/sndfile-example-src/: CMakeLists.txt  DCTDecoder.cpp  DCTEncoder.cpp  README  README.md  SNR_bs_frac  SNR_gather.sh  SNR_size  bitStream.cpp  bitStream.h  bs_SNR.m  bs_frac_fsize  fsize_SNR.m  pedro.txt  pedro_bin.txt  plot_bar_graph.m  plot_bar_graph_V2.m  wav_cmp.cpp  wav_cp.cpp  wav_dct.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h
p2/: B_pixel_enc_1024  B_res_enc_1024  BitStream.cpp  BitStream.h  CMakeLists.txt  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  G_pixel_enc_1024  G_res_enc_1024  GolombCoding.cpp  GolombCoding.h  LossyAudioCodec.cpp  LossyAudioCodec.h  LossyAudioCodec2.cpp  LossyAudioCodec2.h  Makefile  README.md  R_pixel_enc_1024  R_res_enc_1024  bitStream.cpp  bitStream.h  compressed_ratio_graphs.py  createDataCsv.py  exercicio1.cpp  exercicio2.cpp  exetime_bs.py  file_sizes.sh  imgDecoder.cpp  imgDecoder.h  imgEncoder.cpp  imgEncoder.h  lena_encoded  out_file  pedro.txt  pedro_bin.txt  plot_bar_pixels.m  run_decoder.sh  run_encoder.sh
p2/dataset/enc_files/: sample02_enc  sample03_enc
p3/: CMakeLists.txt  Makefile  README.md  example.txt  example_ENG.txt  f2  fcm.cpp  fcm.h  fcm_novo.cpp  fcm_novo.h  fcm_test.cpp  fcm_test_novo.cpp  findlang.cpp  findlang_novo.cpp  lang.cpp  lang_novo.cpp  locatelang.cpp  mini_example_ENG.txt  mini_example_ESP.txt  mini_example_FR.txt  mini_example_GAL.txt  mini_example_GER.txt  mini_example_HOL.txt  mini_example_IRL.txt  mini_example_ITA.txt  mini_example_LUX.txt  mini_example_PT.txt  mini_example_ToBeAnalised_EN_with_PT.txt  mini_example_ToBeAnalised_GAL.txt  mini_example_ToBeAnalised_GER.txt  mini_example_ToBeAnalised_GER_with_PT.txt  plot_bits.m  plot_bits_en_pt_es.m  prob_table  values_bits  values_bits_en_pt_german  values_to_plot
p3/dataset/Europarl/: cs_CZ.Czech-latn-EP7.utf8  da_DK.Danish-latn-EP7.utf8  de_DE.German-latn-EP7.utf8  es_ES.Spanish-latn-EP7.utf8  et_EE.Estonian-latn-EP7.utf8  fi_FI.Finnish-latn-EP7.utf8  fr_FR.French-latn-EP7.utf8  hu_HU.Hungarian-latn-EP7.utf8  it_IT.Italian-latn-EP7.utf8  lt_LT.Lithuanian-latn-EP7.utf8  lv_LV.Latvian-latn-EP7.utf8  nl_NL.Dutch-latn-EP7.utf8  ro_RO.Romanian-latn-EP7.utf8  sk_SK.Slovak-latn-EP7.utf8  sl_SL.Slovenian-latn-EP7.utf8  sv_SE.Swedish-latn-EP7.utf8
